# solid-sim-muda

./: .bazelrc  .gitignore  MODULE.bazel  README.md
solid_sim_muda/1_mass_spring/: BUILD.bazel  MassSpringEnergy.cu
solid_sim_muda/2_dirichlet/: BUILD.bazel
